Add metadata mapping